Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,12 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type A: <class 'list'>, A: [2, 4, 6, 8]\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set A\n",
-    "A = [2,4,]\n",
+    "A = [2,4,6,8]\n",
     "'Type A: {}, A: {}'.format(type(A), A)"
    ]
   },
