Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
        "\"Type A: <class 'list'>, A: [2, 4, 6, 8]\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create set A\n",
-    "A = ([2,4,6,8])\n",
+    "A = ([2,4,6,8]\n",
     "'Type A: {}, A: {}'.format(type(A), A)"
    ]
   },
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "# Create set B\n",
-    "B = \n",
+    "B = None\n",
     "'Type B: {}, B: {}'.format(type(B), B)"
    ]
   },
