Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "# Create set B\n",
     "B = \n",
-    "'Type B: {}, B: {}'.format(type(B), B)"
+    "'Type B: {[3,8,11,12]}, B: {}'.format(type(B), B)"
    ]
   },
   {
