Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,8 +113,8 @@
    "outputs": [],
    "source": [
     "# Create set B\n",
-    "B = \n",
-    "'Type B: {[3,8,11,12]}, B: {}'.format(type(B), B)"
+    "B = [3,8,11,12]\n",
+    "'Type B: {}, B: {}'.format(type(B), B)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Create set C\n",
-    "C = None\n",
+    "C = ([2,3,6,8,9,11])\n",
     "'Type C: {}, C: {}'.format(type(C), C)"
    ]
   },
