Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,20 +108,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type B: <class 'list'>, B: [3, 8, 11, 12]\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set B\n",
-    "B = [3,8,11,12]\n",
+    "B = ([3,8,11,12])\n",
     "'Type B: {}, B: {}'.format(type(B), B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type C: <class 'list'>, C: [2, 3, 6, 8, 9, 11]\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set C\n",
     "C = ([2,3,6,8,9,11])\n",
