--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
    ],
    "source": [
     "# Create set A\n",
-    "A = ([2,4,6,8])\n",
+    "A = set([2,4,6,8])\n",
     "'Type A: {}, A: {}'.format(type(A), A)"
    ]
   },
@@ -124,7 +124,7 @@
    ],
    "source": [
     "# Create set B\n",
-    "B = ([3,8,11,12])\n",
+    "B = set([3,8,11,12])\n",
     "'Type B: {}, B: {}'.format(type(B), B)"
    ]
   },
@@ -146,7 +146,7 @@
    ],
    "source": [
     "# Create set C\n",
-    "C = ([2,3,6,8,9,11])\n",
+    "C = set([2,3,6,8,9,11])\n",
     "'Type C: {}, C: {}'.format(type(C), C)"
    ]
   },
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Create universal set U\n",
-    "U = None\n",
+    "U = set([([1,2,3,4,5,6,7,8,9,10,11,12])])\n",
     "'Type U: {}, U: {}'.format(type(U), U)"
    ]
   },
