Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Type A: <class 'list'>, A: [2, 4, 6, 8]\""
+       "\"Type A: <class 'set'>, A: {8, 2, 4, 6}\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Type B: <class 'list'>, B: [3, 8, 11, 12]\""
+       "\"Type B: <class 'set'>, B: {8, 11, 3, 12}\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Type C: <class 'list'>, C: [2, 3, 6, 8, 9, 11]\""
+       "\"Type C: <class 'set'>, C: {2, 3, 6, 8, 9, 11}\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,12 +152,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type U: <class 'set'>, U: {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12}\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create universal set U\n",
-    "U = set([([1,2,3,4,5,6,7,8,9,10,11,12])])\n",
+    "U = set([1,2,3,4,5,6,7,8,9,10,11,12])\n",
     "'Type U: {}, U: {}'.format(type(U), U)"
    ]
   },
