--- a/index.ipynb
+++ b/index.ipynb
@@ -197,11 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{8}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_inters_B =  None\n",
+    "A_inters_B =  A & B\n",
     "A_inters_B"
    ]
   },
