Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,11 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 6, 8, 9, 11}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_union_C = None\n",
+    "A_union_C = A | C\n",
     "A_union_C"
    ]
   },
