Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,11 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 8}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_comp = None \n",
+    "A_comp = A & U \n",
     "A_comp"
    ]
   },
