Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -253,22 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2, 4, 6, 8}"
+       "{1, 3, 5, 7, 9, 10, 11, 12}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A_comp = A & U \n",
+    "A_comp = U - A\n",
     "A_comp"
    ]
   },
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_union_B_comp = None\n",
+    "A_union_B_comp = U - \n",
     "A_union_B_comp"
    ]
   },
