Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -281,11 +281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 5, 7, 9, 10}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_union_B_comp = U - \n",
+    "A_union_B_comp = U - (A | B)\n",
     "A_union_B_comp"
    ]
   },
@@ -302,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B_inters_C_comp = None\n",
+    "B_inters_C_comp = B \n",
     "B_inters_C_comp"
    ]
   },
