--- a/index.ipynb
+++ b/index.ipynb
@@ -309,11 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{12}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "B_inters_C_comp = B \n",
+    "B_inters_C_comp = B & (U - C)\n",
     "B_inters_C_comp"
    ]
   },
