--- a/index.ipynb
+++ b/index.ipynb
@@ -337,11 +337,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "compl_of_B = None\n",
+    "compl_of_B = A - B\n",
     "compl_of_B"
    ]
   },
@@ -358,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C_compl_B_compl_A = None\n",
+    "C_compl_B_compl_A = C - (B-A)\n",
     "C_compl_B_compl_A "
    ]
   },
