--- a/index.ipynb
+++ b/index.ipynb
@@ -365,9 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "C_compl_B_compl_A = C - (B-A)\n",
     "C_compl_B_compl_A "
@@ -386,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C_inters_A_union_C_min_B= None\n",
+    "C_inters_A_union_C_min_B= (C & A) | (C-B)\n",
     "C_inters_A_union_C_min_B"
    ]
   },
