--- a/index.ipynb
+++ b/index.ipynb
@@ -556,12 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Goldfish', 'Rabbit'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
-    "Eve # should be {'Rabbit', 'Goldfish'}"
+    "Eve.remove('Turtle')\n",
+    "Eve"
    ]
   },
   {
