--- a/index.ipynb
+++ b/index.ipynb
@@ -584,11 +584,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cat',\n",
+       " 'Chicken',\n",
+       " 'Chinchilla',\n",
+       " 'Dog',\n",
+       " 'Donkey',\n",
+       " 'Goldfish',\n",
+       " 'Horse',\n",
+       " 'Parrot',\n",
+       " 'Rabbit'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "Nina = Nina | Mary\n",
     "Nina # {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}"
    ]
   },
