--- a/index.ipynb
+++ b/index.ipynb
@@ -676,12 +676,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Nina = Nina - (Nina )\n",
-    "Nina # 7"
+    "Nina = Nina - (Nina & Eve)\n",
+    "len(Nina) # 7"
    ]
   },
   {
