Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -868,7 +868,7 @@
    ],
    "source": [
     "europe.head(3) #preview dataframe\n",
-    "eu.head(3)"
+    "#eu.head(3)"
    ]
   },
   {
@@ -877,8 +877,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code comes here\n",
-    "set(europe.Country) & se"
+    "# Your code comes here"
    ]
   },
   {
