Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -945,7 +945,8 @@
    ],
    "source": [
     "# Your code comes here\n",
-    "set(europe.Country) | set(eu.Country)"
+    "len(set(europe.Country)) \n",
+    "len((eu.Country))"
    ]
   },
   {
