--- a/index.ipynb
+++ b/index.ipynb
@@ -873,80 +873,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'  Switzerland ',\n",
-       " '  Vatican City ',\n",
-       " ' Albania ',\n",
-       " ' Andorra ',\n",
-       " ' Armenia ',\n",
-       " ' Austria ',\n",
-       " ' Azerbaijan ',\n",
-       " ' Belarus ',\n",
-       " ' Belgium ',\n",
-       " ' Bosnia and Herzegovina ',\n",
-       " ' Bulgaria ',\n",
-       " ' Croatia ',\n",
-       " ' Cyprus ',\n",
-       " ' Czech Republic ',\n",
-       " ' Denmark ',\n",
-       " ' Estonia ',\n",
-       " ' Faroe Islands (Denmark) ',\n",
-       " ' Finland ',\n",
-       " ' Georgia ',\n",
-       " ' Germany ',\n",
-       " ' Gibraltar (UK)',\n",
-       " ' Greece ',\n",
-       " ' Guernsey (UK) ',\n",
-       " ' Hungary ',\n",
-       " ' Iceland ',\n",
-       " ' Ireland ',\n",
-       " ' Isle of Man (UK) ',\n",
-       " ' Italy ',\n",
-       " ' Jersey (UK) ',\n",
-       " ' Kosovo ',\n",
-       " ' Latvia ',\n",
-       " ' Liechtenstein ',\n",
-       " ' Lithuania ',\n",
-       " ' Luxembourg ',\n",
-       " ' Macedonia ',\n",
-       " ' Malta ',\n",
-       " ' Moldova ',\n",
-       " ' Monaco ',\n",
-       " ' Montenegro ',\n",
-       " ' Netherlands ',\n",
-       " ' Norway ',\n",
-       " ' Poland ',\n",
-       " ' Portugal ',\n",
-       " ' Romania ',\n",
-       " ' Russia',\n",
-       " ' San Marino ',\n",
-       " ' Serbia ',\n",
-       " ' Slovakia ',\n",
-       " ' Slovenia ',\n",
-       " ' Spain ',\n",
-       " ' Svalbard (Norway) ',\n",
-       " ' Sweden ',\n",
-       " ' Turkey ',\n",
-       " ' Ukraine',\n",
-       " ' Åland Islands (Finland) ',\n",
-       " 'France',\n",
-       " 'United Kingdom'}"
+       "57"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code comes here\n",
-    "len(set(europe.Country)) \n",
-    "len((eu.Country))"
+    "len(set(europe.Country))\n",
+    "len(set(eu.Country))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(set(europe.Country))\n",
+    "len(set(eu.Country))"
    ]
   },
   {
